process one profile at a time

--- a/force-app/main/default/classes/GetProfileMetadataBatch.cls
+++ b/force-app/main/default/classes/GetProfileMetadataBatch.cls
@@ -1,97 +1,61 @@
 public with sharing class GetProfileMetadataBatch
-    implements Database.Batchable<List<String>>, Database.AllowsCallouts, Database.Stateful {
+    implements Database.Batchable<String>, Database.AllowsCallouts, Database.Stateful {
 
-    private List<List<String>> timedOutChunks;
+    private List<String> unprocessedProfiles = new List<String>();
     private Map<String, Datetime> lastSavedDatetimes = new Map<String, Datetime>();
 
-    public GetProfileMetadataBatch() {
-        this.timedOutChunks = new List<List<String>>();
+    public List<String> start(Database.BatchableContext ctx) {
+        ProfileMetadata.updateProfileMetadataRecords();
+        return ProfileMetadata.getProfilesToUpdate();
     }
 
-    public GetProfileMetadataBatch(List<List<String>> timedOutChunks) {
-        this.timedOutChunks = timedOutChunks;
-    }
-
-    public List<List<String>> start(Database.BatchableContext ctx) {
-        List<List<String>> dynamicChunks = new List<List<String>>();
-
-        Boolean isRetry; // for testing
-        if (timedOutChunks.isEmpty()) {
-            ProfileMetadata.updateProfileMetadataRecords();
-            dynamicChunks = ProfileMetadata.getDynamicChunks();
-            isRetry = false; // for testing
-        } else {
-            dynamicChunks.addAll(this.timedOutChunks);
-            this.timedOutChunks.clear();
-            isRetry = true; // for testing
-        }
-
-        if (!isRetry) return new List<List<String>>{ dynamicChunks[0], dynamicChunks[1], dynamicChunks[2] }; // for testing
-        return dynamicChunks;
-        
-    }
-
-    public void execute(Database.BatchableContext ctx, List<List<String>> chunks){
-        system.debug(chunks);
+    public void execute(Database.BatchableContext ctx, List<String> encodedFullNames){
+        system.debug(encodedFullNames);
         // by design, there should only ever be a single chunk (ie, a single list of profile fullNames)
-        if (chunks.size() != 1) {
-            system.debug('chunk size error: ' + chunks.size());
+        if (encodedFullNames.size() != 1) {
+            system.debug('trying to process ' + encodedFullNames.size() + 'profiles.');
             return;
         }
-        List<String> encodedFullNames = chunks[0];
-
+        
         MetadataService.MetadataPort service = MetadataService.createService();
         try {
             MetadataService.ReadProfileResult result = (MetadataService.ReadProfileResult) service.readMetadata('Profile', encodedFullNames);
-            List<MetadataService.Profile> profiles = (List<MetadataService.Profile>) result.getRecords();
-            for (MetadataService.Profile rawProfile: profiles) {
-                Boolean success = ProfileMetadata.persistProfile(rawProfile);
+            List<MetadataService.Profile> rawProfiles = (List<MetadataService.Profile>) result.getRecords();
+
+            system.debug('heap 1: ' + Limits.getHeapSize());
+            if (Limits.getHeapSize() > Limits.getLimitHeapSize()) {
+                this.unprocessedProfiles.add(encodedFullNames[0]);
+                return;
+            }
+
+            while (rawProfiles.size() > 0) {
+                MetadataService.Profile rawProfile = rawProfiles.remove(0);  // manage heap
+                String fullName = rawProfile.fullName; // this is the encoded fullName
+                Profile profile = new Profile(rawProfile);
+                system.debug('heap 2: ' + Limits.getHeapSize());
+                rawProfile = null; // manage heap
+                system.debug('heap 3: ' + Limits.getHeapSize());
+                Boolean success = ProfileMetadata.persistProfile(profile);
                 if (success) {
-                    lastSavedDatetimes.put(rawProfile.fullName, Datetime.now());  // this is the encoded fullName
+                    lastSavedDatetimes.put(fullName, Datetime.now());
                 }
             }    
         } catch (CalloutException e) {
             system.debug('WebService Callout Exception: ' + e.getMessage());
-            this.timedOutChunks.add(encodedFullNames);
+            this.unprocessedProfiles.add(encodedFullNames[0]);
         } catch (Exception e) {
             system.debug('Other Exception: ' + e.getMessage());
+            this.unprocessedProfiles.add(encodedFullNames[0]);
         }
     }
 
     public void finish(Database.BatchableContext ctx){
         ProfileMetadata.persistLastSavedDatetimes(this.lastSavedDatetimes);
         
-        if (this.timedOutChunks.isEmpty()) {
-            // post platform event
-            system.debug('finished processing');
-        } else {
-            List<List<String>> smallerChunks = splitChunks(this.timedOutChunks);
-            Database.executeBatch(new GetProfileMetadataBatch(smallerChunks), 1);
-        }
-    }
-
-    private List<List<String>> splitChunks(List<List<String>> chunks) {
-        List<List<String>> splitChunks = new List<List<String>>();
-        List<String> largeProfiles = new List<String>();
-
-        for (List<String> chunk: chunks) {
-            Integer chunkSize = chunk.size();
-            if (chunkSize == 1) {
-                largeProfiles.add(chunk[0]);
-                continue;
-            }
-
-            List<String> newChunk = new List<String>();
-            while (newChunk.size() < chunkSize / 2) {
-                newChunk.add(chunk.remove(0));
-            }
-
-            splitChunks.add(newChunk);
-            splitChunks.add(chunk);
+        if (!this.unprocessedProfiles.isEmpty()) {
+            ProfileMetadata.markTooBig(this.unprocessedProfiles);
         }
 
-        if (!largeProfiles.isEmpty()) ProfileMetadata.markTooBig(largeProfiles);
-
-        return splitChunks;
+        // call webhook
     }
 }
