refactor soap api and update package.xml

--- a/force-app/main/default/classes/GetProfileMetadataBatch.cls
+++ b/force-app/main/default/classes/GetProfileMetadataBatch.cls
@@ -5,9 +5,8 @@ public with sharing class GetProfileMetadataBatch
     private Map<String, Datetime> lastSavedDatetimes = new Map<String, Datetime>();
 
     public List<String> start(Database.BatchableContext ctx) {
-        // ProfileMetadata.updateProfileMetadataRecords();
-        // return ProfileMetadata.getProfilesToUpdate();
-        return new List<String>{ 'Admin' };
+        ProfileMetadata.updateProfileMetadataRecords();
+        return ProfileMetadata.getProfilesToUpdate();
     }
 
     public void execute(Database.BatchableContext ctx, List<String> encodedFullNames){
@@ -18,38 +17,10 @@ public with sharing class GetProfileMetadataBatch
             return;
         }
         
-        SOAPApi soapApi = new SoapApi('readMetadata', 'Profile', encodedFullNames);
-        soapApi.executeRequest();
-        // MetadataService.MetadataPort service = MetadataService.createService();
-        // try {
-        //     MetadataService.ReadProfileResult result = (MetadataService.ReadProfileResult) service.readMetadata('Profile', encodedFullNames);
-        //     List<MetadataService.Profile> rawProfiles = (List<MetadataService.Profile>) result.getRecords();
-
-        //     system.debug('heap 1: ' + Limits.getHeapSize());
-        //     if (Limits.getHeapSize() > Limits.getLimitHeapSize()) {
-        //         this.unprocessedProfiles.add(encodedFullNames[0]);
-        //         return;
-        //     }
-
-        //     while (rawProfiles.size() > 0) {
-        //         MetadataService.Profile rawProfile = rawProfiles.remove(0);  // manage heap
-        //         String fullName = rawProfile.fullName; // this is the encoded fullName
-        //         Profile profile = new Profile(rawProfile);
-        //         system.debug('heap 2: ' + Limits.getHeapSize());
-        //         rawProfile = null; // manage heap
-        //         system.debug('heap 3: ' + Limits.getHeapSize());
-        //         Boolean success = ProfileMetadata.persistProfile(profile);
-        //         if (success) {
-        //             lastSavedDatetimes.put(fullName, Datetime.now());
-        //         }
-        //     }    
-        // } catch (CalloutException e) {
-        //     system.debug('WebService Callout Exception: ' + e.getMessage());
-        //     this.unprocessedProfiles.add(encodedFullNames[0]);
-        // } catch (Exception e) {
-        //     system.debug('Other Exception: ' + e.getMessage());
-        //     this.unprocessedProfiles.add(encodedFullNames[0]);
-        // }
+        ReadMetadataApi readMetadataApi = new ReadMetadataApi('Profile', encodedFullNames);
+        system.debug(Limits.getHeapSize());
+        String xml = readMetadataApi.executeRequest();
+        system.debug(Limits.getHeapSize());
     }
 
     public void finish(Database.BatchableContext ctx){
