--- a/force-app/main/default/classes/ListMetadataApi.cls
+++ b/force-app/main/default/classes/ListMetadataApi.cls
@@ -2,11 +2,10 @@ public class ListMetadataApi extends SOAPApi {
     private String metadataType;
 
     public ListMetadataApi(String metadataType) {
-        super();
         this.metadataType = metadataType;
     }
 
-    public override String getSOAPBody() {
+    protected override String getSOAPBody() {
         String body = '';
         body += '<soapenv:Body xmlns="http://soap.sforce.com/2006/04/metadata">';
         body += '<listMetadata>';
