--- a/force-app/main/default/classes/ReadMetadataApi.cls
+++ b/force-app/main/default/classes/ReadMetadataApi.cls
@@ -3,19 +3,20 @@ public class ReadMetadataApi extends SOAPApi {
     private List<String> fullNames;
 
     public ReadMetadataApi(String metadataType, List<String> fullNames) {
-        super();
         this.metadataType = metadataType;
         this.fullNames = fullNames;
     }
 
-    public override String getSOAPBody() {
+    protected override String getSOAPBody() {
         String body = '';
+        body += '<soapenv:Body xmlns="http://soap.sforce.com/2006/04/metadata">';
         body += '<readMetadata>';
         body += '<type>' + this.metadataType + '</type>';
         for (String fullName: this.fullNames) {
             body += '<fullNames>' + fullName + '</fullNames>';
         }
         body += '</readMetadata>';
+        body += '</soapenv:Body>';
         return body;
     }
 }
