--- a/force-app/main/default/classes/SOAPApi.cls
+++ b/force-app/main/default/classes/SOAPApi.cls
@@ -1,10 +1,5 @@
 public abstract class SOAPApi {
     private static final Integer SOAP_TIMEOUT = 120000;
-    private String sessionId;
-    
-    public SOAPApi() {
-        this.sessionId = UserInfo.getSessionId();
-    }
     
     /**
      * returns the XML response to the SOAP request
@@ -13,15 +8,16 @@ public abstract class SOAPApi {
 
         HttpRequest req = new HttpRequest();
 
-        String endPoint = URL.getSalesforceBaseUrl().toExternalForm() + '/services/Soap/m/54.0'; // + ElementsUtils.SF_API_VERSION;
+        String endPoint = URL.getSalesforceBaseUrl().toExternalForm() + '/services/Soap/m/54.0';
         req.setEndpoint(endPoint);
-        req.setHeader('Authorization', 'Bearer ' + this.sessionId);
+        req.setHeader('Authorization', 'Bearer ' + UserInfo.getSessionId());
         // req.setEndpoint('callout:ElementsSoapApi/services/Soap/m/54.0');
         req.setHeader('Content-Type', 'text/xml');
         req.setHeader('Accept', '*/*');
         req.setHeader('SOAPAction', '""');
         req.setMethod('POST');
         req.setTimeout(SOAP_TIMEOUT);
+system.debug(getSOAPEnvelope());
         req.setBody(getSOAPEnvelope());
 
         Http http = new Http();
@@ -48,12 +44,12 @@ public abstract class SOAPApi {
         String header = '';
         header += '<soapenv:Header xmlns="http://soap.sforce.com/2006/04/metadata">';
         header += '<SessionHeader>';
-        header += '<sessionId>' + this.sessionId + '</sessionId>';
+        header += '<sessionId>' + UserInfo.getSessionId() + '</sessionId>';
         // header += '<sessionId>' + '{!$Credential.OAuthToken}' + '</sessionId>';
         header += '</SessionHeader>';
         header += '</soapenv:Header>';
         return header;
     }
 
-    public abstract String getSOAPBody();
+    protected abstract String getSOAPBody();
 }
